# openai-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: completions.rs  edits.rs  moderations.rs
src/: lib.rs  main.rs
src/data/: completion.rs  edit.rs  mod.rs  model.rs  moderation.rs
