[package]
name = "openai-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.66"
eyre = "0.6.8"
serde = { version = "1.0.156", features = ["derive"] }
typed-builder = "0.14.0"
